--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,7 +8,7 @@
         <header>
             <nav>
                 <ul>
-                    <li><a class="logo" href="index.html">Logo</a>
+                    <li><a class="logo" href="../index.html">Logo</a>
                     <li><a class="linkbuttons" href="../index.html">Home</a></li>
                     <li><a class="linkbuttons" href="games.html">Games</a></li>
                     <li><a class="linkbuttons" href="contact.html">Contact</a></li>
