--- a/pages/games.html
+++ b/pages/games.html
@@ -8,7 +8,7 @@
         <header>
             <nav>
                 <ul>
-                    <li><a class="logo" href="index.html">Logo</a>
+                    <li><a class="logo" href="../index.html">Logo</a>
                     <li><a class="linkbuttons" href="../index.html">Home</a></li>
                     <li><a class="linkbuttons" href="games.html">Games</a></li>
                     <li><a class="linkbuttons" href="contact.html">Contact</a></li>
@@ -20,9 +20,15 @@
             <br>
             <div>Here are all the games we've made so far!</div>
         </header>
+        <section></section>
+        <section></section>
+        <section></section>
         <section class="centeredsection">
             <center><p>Sorry! We do not have any released games currently. Please check at a later time!</p></center>
          </section>
+         <section></section>
+         <section></section>
+         <section></section>
         <footer>Copyright (c) 2022 Limex Games</footer>
     </body>
 </html>
