Update website interface + add "the team" page

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
             <nav>
                 <ul>
                     <li><a class="logo" href="index.html">Logo</a>
-                    <li><a class="linkbuttons" href="index.html">Home</a></li>
-                    <li><a class="linkbuttons" href="pages/games.html">Games</a></li>
-                    <li><a class="linkbuttons" href="pages/contact.html">Contact</a></li>
-                    <li><a class="linkbuttons" href="https://web.roblox.com/groups/11899378/limex#!/about">Roblox Group</a></li>
+                    <li><a class="navbutton" href="index.html">Home</a></li>
+                    <li><a class="navbutton" href="pages/games.html">Games</a></li>
+                    <li><a class="navbutton" href="pages/team.html">The Team</a></li>
+                    <li><a class="navbutton" href="https://web.roblox.com/groups/11899378/limex#!/about">Roblox Group</a></li>
                 </ul>
             </nav>
             <br>
@@ -32,18 +32,13 @@
         <br>
         <br>
         <section>
-        <h2>Developers</h2>
-        <p>As of currently, we only have 2 developers, them being</p>
-        <p><a href="https://web.roblox.com/users/120053451/profile">https://web.roblox.com/users/120053451/profile</a></p>
-        <p>and</p>
-        <p><a href="https://web.roblox.com/users/2643019385/profile">https://web.roblox.com/users/2643019385/profile</a></p>
+            <h2>Contact us</h2>
+            <p>To contact us, you can join our discord server and create a support ticket from there! You can also socialize with other fans within our community!</p>
+            <center><a href="https://discord.gg/DtEUsh62zf"><img class="contactbuttondiscord" alt="Our Discord Server" src="https://support.discord.com/hc/user_images/PRywUXcqg0v5DD6s7C3LyQ.jpeg" width="50&quot;" height="50"></a></center>
         </section>
         <br>
         <br>
         <br>
-        <section>
-            <p>Thank you for taking your time to read!</p>
-        </section>
         <footer>Copyright (c) 2022 Limex Games</footer>
     </body>
 </html>
