--- a/pages/games.html
+++ b/pages/games.html
@@ -9,10 +9,10 @@
             <nav>
                 <ul>
                     <li><a class="logo" href="../index.html">Logo</a>
-                    <li><a class="linkbuttons" href="../index.html">Home</a></li>
-                    <li><a class="linkbuttons" href="games.html">Games</a></li>
-                    <li><a class="linkbuttons" href="contact.html">Contact</a></li>
-                    <li><a class="linkbuttons" href="https://web.roblox.com/groups/11899378/limex#!/about">Roblox Group</a></li>
+                    <li><a class="navbutton" href="../index.html">Home</a></li>
+                    <li><a class="navbutton" href="games.html">Games</a></li>
+                    <li><a class="navbutton" href="team.html">The Team</a></li>
+                    <li><a class="navbutton" href="https://web.roblox.com/groups/11899378/limex#!/about">Roblox Group</a></li>
                 </ul>
             </nav>
             <br>
@@ -20,15 +20,16 @@
             <br>
             <div>Here are all the games we've made so far!</div>
         </header>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section class="centeredsection">
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <section>
             <center><p>Sorry! We do not have any released games currently. Please check at a later time!</p></center>
          </section>
-         <section></section>
-         <section></section>
-         <section></section>
         <footer>Copyright (c) 2022 Limex Games</footer>
     </body>
 </html>
