--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <header>
             <nav>
                 <ul>
-                    <li><a class="logo" href="index.html">Logo</a>
+                    <li><a class="logo" href="index.html">Logo</a></li>
                     <li><a class="navbutton" href="index.html">Home</a></li>
                     <li><a class="navbutton" href="pages/games.html">Games</a></li>
                     <li><a class="navbutton" href="pages/team.html">The Team</a></li>
@@ -23,10 +23,11 @@
         </header>
         <section>
             <h2>About us</h2>
-            <p>We are a small indie game studio, founded in 2021 by</p>
-            <p>2 friends under the name of "Avalanche Studios". Since</p>
-            <p>then, we've been determinated to roll out an amazing</p>
-            <p>game for the roblox community to enjoy!</p>
+            <p>We are a small indie game studio operating</p>
+            <p>within Oceania, founded in 2021 by 2 friends </p>
+            <p>under the name of "Avalanche Studios". Since</p>
+            <p>then, we've been determinated to roll out an</p>
+            <p>amazing game for the roblox community to enjoy!</p>
         </section>
         <br>
         <br>
