--- a/pages/team.html
+++ b/pages/team.html
@@ -28,13 +28,15 @@
             <p><a class="floatleft">LuaVMX - Programmer, Animator</a></p>
             <br>
             <img alt="LuaVMX" src="https://tr.rbxcdn.com/0dcc251dcb9616de62c89ee910235f2c/150/150/AvatarHeadshot/Png" height="100px" width="100px"></img>
-            <p><a href="https://web.roblox.com/users/120053451/profile">https://web.roblox.com/users/120053451/profile</a></p>
+            <p><a class="link" href="https://web.roblox.com/users/120053451/profile">https://web.roblox.com/users/120053451/profile</a></p>
         </section>
         <section>
             <p><a class="floatleft">thereal_butfart - Builder, Designer</a></p>
             <br>
+            <br>
             <img alt="thereal_butfart" src="https://tr.rbxcdn.com/7d0369b678e7f3487f1b2205eb0ddf53/150/150/AvatarHeadshot/Png" height="100px" width="100px"></img>
-            <p><a href="https://web.roblox.com/users/2643019385/profile">https://web.roblox.com/users/2643019385/profile</a></p>
+            <br>
+            <p><a class="link" href="https://web.roblox.com/users/2643019385/profile">https://web.roblox.com/users/2643019385/profile</a></p>
         </section>
         <section>
             <h2>Staff Members<h2>
@@ -42,8 +44,9 @@
         <section>
             <p><a class="floatleft">danger_333556 - Moderator</a></p>
             <br>
+            <br>
             <img alt="danger_333556" src="https://tr.rbxcdn.com/3debb595918a45843c8cd265f7ceffbf/150/150/AvatarHeadshot/Png" height="100px" width="100px"></img>
-            <p><a href="https://web.roblox.com/users/2414582642/profile">https://web.roblox.com/users/2414582642/profile</a></p>
+            <p><a class="link" href="https://web.roblox.com/users/2414582642/profile">https://web.roblox.com/users/2414582642/profile</a></p>
         </section>
         <br>
         <br>
