--- a/pages/team.html
+++ b/pages/team.html
@@ -41,15 +41,18 @@
             <br>
             <p><a class="link" href="https://web.roblox.com/users/2643019385/profile">https://web.roblox.com/users/2643019385/profile</a></p>
         </section>
-        <section>
-            <h2>Staff Members<h2>
-        </section>
-        <section>
+                <section>
             <p><a class="floatleft">danger_333556 - Moderator</a></p>
             <br>
             <br>
             <img alt="danger_333556" src="https://tr.rbxcdn.com/3debb595918a45843c8cd265f7ceffbf/150/150/AvatarHeadshot/Png" height="100px" width="100px"></img>
             <p><a class="link" href="https://web.roblox.com/users/2414582642/profile">https://web.roblox.com/users/2414582642/profile</a></p>
+        </section>
+        <section>
+            <h2>Staff Members<h2>
+        </section>
+        <section>
+            <p>We don't have any staff members as of currently.</p>
         </section>
         <br>
         <br>
