--- a/pages/team.html
+++ b/pages/team.html
@@ -42,7 +42,7 @@
             <p><a class="link" href="https://web.roblox.com/users/2643019385/profile">https://web.roblox.com/users/2643019385/profile</a></p>
         </section>
                 <section>
-            <p><a class="floatleft">danger_333556 - Moderator</a></p>
+            <p><a class="floatleft">danger_333556 - 2D Artist</a></p>
             <br>
             <br>
             <img alt="danger_333556" src="https://tr.rbxcdn.com/3debb595918a45843c8cd265f7ceffbf/150/150/AvatarHeadshot/Png" height="100px" width="100px"></img>
