Update website to add "Tools"

--- a/pages/games.html
+++ b/pages/games.html
@@ -15,6 +15,7 @@
                     <li><a class="navbutton" href="../index.html">Home</a></li>
                     <li><a class="navbutton" href="games.html">Games</a></li>
                     <li><a class="navbutton" href="team.html">The Team</a></li>
+                    <li><a class="navbutton" href="tools.html">Tools</a></li>
                     <li><a class="navbutton" href="https://web.roblox.com/groups/11899378/limex#!/about">Roblox Group</a></li>
                 </ul>
             </nav>
