--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                     <li><a class="navbutton" href="index.html">Home</a></li>
                     <li><a class="navbutton" href="pages/games.html">Games</a></li>
                     <li><a class="navbutton" href="pages/team.html">The Team</a></li>
+                    <li><a class="navbutton" href="pages/tools.html">Tools</a></li>
                     <li><a class="navbutton" href="https://web.roblox.com/groups/11899378/limex#!/about">Roblox Group</a></li>
                 </ul>
             </nav>
